[package]
name = "rustsand"
version = "0.0.1"
authors = ["Nathan Stoddard <nstodda@purdue.edu>"]

[[bin]]
name = "rustsand"

[dependencies]
num = "*"
rand = "*"

[dependencies.glfw]
# git = "https://github.com/nstoddard/glfw-rs"
path = "C:/Users/Nathan/Desktop/code/libs/glfw-rs"
default-features = false

[dependencies.image]
git = "https://github.com/PistonDevelopers/rust-image"

[dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs"

[dependencies.vecmat]
git = "https://github.com/nstoddard/vecmat"

[dependencies.timer]
git = "https://github.com/nstoddard/timer"

[dependencies.glium-gui]
path = "C:/Users/Nathan/Desktop/code/libs/glium-gui"

[dependencies.glium]
git = "https://github.com/tomaka/glium"
default-features = false
